getLast fix